lots of endpoints to directly query the DB
