# docs/swagger.json
@@ -4,6 +4,121 @@
         "contact": {}
     },
     "paths": {
+        "/basic_information/GetAllDataCenters": {
+            "get": {
+                "description": "Get all the data centers we can provision to.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Basic Information"
+                ],
+                "summary": "Get all the data centers we can provision to.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/basic_information/GetAllDatastores": {
+            "get": {
+                "description": "Get all the data stores you can leverage.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Basic Information"
+                ],
+                "summary": "Get all the data stores you can leverage.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/basic_information/GetAllEnvironments": {
+            "get": {
+                "description": "Get all the environments we can provision to.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Basic Information"
+                ],
+                "summary": "Get all the environments we can provision to.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/basic_information/GetAllFlavors": {
+            "get": {
+                "description": "Get all the flavors we can provision on.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Basic Information"
+                ],
+                "summary": "Get all the flavors we can provision on.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/basic_information/GetAllNetworkZones": {
+            "get": {
+                "description": "Get all the network zones we can provision to.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Basic Information"
+                ],
+                "summary": "Get all the network zones we can provision to.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/cluster": {
             "post": {
                 "description": "Create a new cluster.",
@@ -71,38 +186,7 @@
                 }
             }
         },
-        "/information/GetTeams": {
-            "get": {
-                "description": "Displays all team names attached to a username. Will use currently logged in user by default.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Information"
-                ],
-                "summary": "Get teams as designated by SNOW.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Username in DC1",
-                        "name": "username",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/information/ProjectsByTeam": {
+        "/project_information/ProjectsByTeam": {
             "get": {
                 "description": "Get all projects by team requested.",
                 "consumes": [
@@ -112,7 +196,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Information"
+                    "Project Information"
                 ],
                 "summary": "Get projects by team ProjectsByTeam",
                 "parameters": [
@@ -133,7 +217,7 @@
                 }
             }
         },
-        "/information/ServersByProject": {
+        "/project_information/ServersByProject": {
             "get": {
                 "description": "Displays all servers in a project.",
                 "consumes": [
@@ -143,7 +227,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Information"
+                    "Project Information"
                 ],
                 "summary": "Get servers by project",
                 "parameters": [
@@ -165,6 +249,37 @@
                         "name": "project",
                         "in": "query",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user_information/GetTeams": {
+            "get": {
+                "description": "Displays all team names attached to a username. Will use currently logged in user by default.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Information"
+                ],
+                "summary": "Get teams as designated by SNOW.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username in DC1",
+                        "name": "username",
+                        "in": "query"
                     }
                 ],
                 "responses": {
