# v1/endpoints/endpoints.go
@@ -1,9 +1,11 @@
 package endpoints
 
 import (
+	"dbs-api/v1/endpoints/basic_information_endpoint"
 	"dbs-api/v1/endpoints/cluster_endpoint"
 	"dbs-api/v1/endpoints/endpoint_example"
-	"dbs-api/v1/endpoints/information_endpoint"
+	"dbs-api/v1/endpoints/project_information_endpoint"
+	"dbs-api/v1/endpoints/user_information_endpoint"
 
 	"github.com/gin-gonic/gin"
 )
@@ -20,9 +22,19 @@ func Initialize(v1 *gin.RouterGroup) {
 		cluster_endpoint.Initialize(cg)
 	}
 
-	ig := v1.Group("/information")
+	uig := v1.Group("/user_information")
 	{
-		information_endpoint.Initialize(ig)
+		user_information_endpoint.Initialize(uig)
+	}
+
+	pig := v1.Group("/project_information")
+	{
+		project_information_endpoint.Initialize(pig)
+	}
+
+	big := v1.Group("/basic_information")
+	{
+		basic_information_endpoint.Initialize(big)
 	}
 
 }
