# v1/endpoints/information_endpoint/information_endpoint.go
@@ -1,13 +1,0 @@
-package information_endpoint
-
-import (
-	"github.com/gin-gonic/gin"
-)
-
-func Initialize(ig *gin.RouterGroup) {
-
-	ig.GET("/ProjectsByTeam", ProjectsByTeam)
-	ig.GET("/ServersByProject", ServersByProject)
-	ig.GET("/GetTeams", GetTeams)
-
-}
