# v1/endpoints/user_information_endpoint/user_information_endpoint.go
@@ -1,4 +1,4 @@
-package information_endpoint
+package user_information_endpoint
 
 import (
 	"dbs-api/v1/helpers"
@@ -6,16 +6,22 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+func Initialize(uig *gin.RouterGroup) {
+
+	uig.GET("/GetTeams", GetTeams)
+
+}
+
 // GetTeams GET
 // @Summary Get teams as designated by SNOW.
 // @Schemes
 // @Description Displays all team names attached to a username. Will use currently logged in user by default.
-// @Tags Information
+// @Tags User Information
 // @Accept json
 // @Produce json
 // @Param       username        query	string  false 	"Username in DC1"
 // @Success 200 {string} Example JSON Output
-// @Router /information/GetTeams [get]
+// @Router /user_information/GetTeams [get]
 func GetTeams(g *gin.Context) {
 	username := g.Request.URL.Query().Get("username")
 
